[package]
name = "gpio-cdev"
version = "0.2.1"
authors = ["Paul Osborne <osbpau@gmail.com>", "Frank Pagliughi <fpagliughi@mindspring.com>"]
description = "Linux GPIO Character Device Support (/dev/gpiochipN)"
homepage = "https://github.com/posborne/rust-gpio-cdev"
repository = "https://github.com/posborne/rust-gpio-cdev"
readme = "README.md"
categories = ["embedded", "hardware-support", "os", "os::unix-apis"]
keywords = ["linux", "gpio", "gpiochip", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.0"
failure = "0.1"
libc = "0.2"
nix = "0.14"

[dev-dependencies]
quicli = "0.2"
